fix HCA service cassettes

--- a/spec/support/vcr_cassettes/hca/demographic_no.yml
+++ b/spec/support/vcr_cassettes/hca/demographic_no.yml
@@ -7,7 +7,7 @@ http_interactions:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><soap:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ns1="http://va.gov/schema/esr/voa/v1"
-        xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" xmlns:tns="http://va.gov/service/esr/voa/v1"><soap:Body><ns1:submitFormRequest><va:form
+        xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" xmlns:tns="http://va.gov/service/esr/voa/v1" xmlns:tns="http://va.gov/service/esr/voa/v1"><soap:Body><ns1:submitFormRequest><va:form
         xmlns:va="http://va.gov/schema/esr/voa/v1"><va:formIdentifier><va:type>100</va:type><va:value>1010EZ</va:value><va:version>2986360436</va:version></va:formIdentifier><va:summary><eeSummary:demographics
         xmlns:eeSummary="http://jaxws.webservices.esr.med.va.gov/schemas"><eeSummary:appointmentRequestResponse>false</eeSummary:appointmentRequestResponse><eeSummary:contactInfo><eeSummary:addresses><eeSummary:address><eeSummary:city>City</eeSummary:city><eeSummary:country>USA</eeSummary:country><eeSummary:line1>1234
         Main</eeSummary:line1><eeSummary:line2>Apt 3</eeSummary:line2><eeSummary:state>AK</eeSummary:state><eeSummary:zipCode>17402</eeSummary:zipCode><eeSummary:addressTypeCode>P</eeSummary:addressTypeCode></eeSummary:address><eeSummary:address><eeSummary:city>FPO</eeSummary:city><eeSummary:country>USA</eeSummary:country><eeSummary:line1>PSC
@@ -29,7 +29,7 @@ http_interactions:
       Date:
       - Fri, 05 May 2023 10:04:13 GMT
       Content-Length:
-      - '4650'
+      - '4695'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
