Fix form1010_ezr cassettes

--- a/spec/support/vcr_cassettes/form1010_ezr/authorized_submit_with_next_of_kin_and_emergency_contact.yml
+++ b/spec/support/vcr_cassettes/form1010_ezr/authorized_submit_with_next_of_kin_and_emergency_contact.yml
@@ -131,7 +131,7 @@ http_interactions:
       encoding: UTF-8
       string: <?xml version="1.0" encoding="UTF-8"?><soap:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ns1="http://va.gov/schema/esr/voa/v1"
-        xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" xmlns:tns="http://va.gov/service/esr/voa/v1"><soap:Body><ns1:submitFormRequest><va:form
+        xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" xmlns:tns="http://va.gov/service/esr/voa/v1" xmlns:tns="http://va.gov/service/esr/voa/v1"><soap:Body><ns1:submitFormRequest><va:form
         xmlns:va="http://va.gov/schema/esr/voa/v1"><va:formIdentifier><va:type>101</va:type><va:value>1010EZR</va:value><va:version>2986360436</va:version></va:formIdentifier><va:summary><eeSummary:associations
         xmlns:eeSummary="http://jaxws.webservices.esr.med.va.gov/schemas"><eeSummary:association><eeSummary:contactType>11</eeSummary:contactType><eeSummary:relationship>Stepson</eeSummary:relationship><eeSummary:givenName>FIRSTCHILDA</eeSummary:givenName><eeSummary:middleName>MIDDLECHILDA</eeSummary:middleName><eeSummary:familyName>LASTCHILDA</eeSummary:familyName><eeSummary:suffix>JR.</eeSummary:suffix></eeSummary:association><eeSummary:association><eeSummary:contactType>11</eeSummary:contactType><eeSummary:relationship>Stepdaughter</eeSummary:relationship><eeSummary:givenName>FIRSTCHILDB</eeSummary:givenName><eeSummary:middleName>MIDDLECHILDB</eeSummary:middleName><eeSummary:familyName>LASTCHILDB</eeSummary:familyName><eeSummary:suffix>SR.</eeSummary:suffix></eeSummary:association><eeSummary:association><eeSummary:contactType>1</eeSummary:contactType><eeSummary:relationship>SON</eeSummary:relationship><eeSummary:address><eeSummary:city>Dulles</eeSummary:city><eeSummary:country>USA</eeSummary:country><eeSummary:line1>476
         Test Ave</eeSummary:line1><eeSummary:state>VA</eeSummary:state><eeSummary:zipCode>20101</eeSummary:zipCode><eeSummary:zipPlus4>0101</eeSummary:zipPlus4></eeSummary:address><eeSummary:primaryPhone>1239131234</eeSummary:primaryPhone><eeSummary:alternatePhone>7254551234</eeSummary:alternatePhone><eeSummary:givenName>FIRSTNOKA</eeSummary:givenName><eeSummary:middleName>MIDDLENOKA</eeSummary:middleName><eeSummary:familyName>LASTNOKA</eeSummary:familyName><eeSummary:suffix>JR.</eeSummary:suffix></eeSummary:association><eeSummary:association><eeSummary:contactType>2</eeSummary:contactType><eeSummary:relationship>DAUGHTER</eeSummary:relationship><eeSummary:address><eeSummary:city>Ontario</eeSummary:city><eeSummary:country>CAN</eeSummary:country><eeSummary:line1>834
@@ -164,7 +164,7 @@ http_interactions:
       Date:
       - Thu, 30 Nov 2023 15:52:36 GMT
       Content-Length:
-      - '15298'
+      - '15343'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
