[#MHV-51057] mhv session lock on refresh

--- a/config/redis.yml
+++ b/config/redis.yml
@@ -53,6 +53,9 @@ development: &defaults
   mhv_mr_fhir_session_lock:
     namespace: mhv-mr-fhir-session-lock
     each_ttl: 10
+  mhv_session_lock:
+    namespace: mhv-session-lock
+    each_ttl: 10
   mdot:
     namespace: mdot
     each_ttl: 1800
