--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1688,9 +1688,19 @@ xlsx_file_fetcher:
   github_access_token: ~
 
 vye:
-  ivr_key: '0615324c-5a8d-9fe1-3542-7b3b86df281f'
+  ivr_key: ~
+  # The scrypt hash below contains keyword arguments that are passed wholesale to OpenSSL::KDF::scrypt:
+  #
+  # | Key  | Description                                          |
+  # | ---- | ---------------------------------------------------- |
+  # | salt | Salt                                                 |
+  # | N    | CPU/memory cost parameter. This must be a power of 2 |
+  # | r    | Block size parameter                                 |
+  # | p    | Parallelization parameter                            |
+  #
+  # See OpenSSL documentation for more information. (https://ruby-doc.org/core-3.1.2/OpenSSL/KDF.html#method-c-scrypt)
   scrypt:
-    salt: '51463d6f-3b19-ae87-578a-7c4e3f1a5588'
+    salt: ~
     N: 16384
     r: 8
     p: 1
