--- a/config/features.yml
+++ b/config/features.yml
@@ -246,6 +246,9 @@ features:
   claims_claim_uploader_use_bd:
     actor_type: user
     description: Use BDS instead of EVSS to upload to VBMS.
+  claims_load_testing:
+    actor_type: user
+    description: Enables the ability to skip jobs for load testing
   claims_status_v1_bgs_enabled:
     actor_type: user
     description: enables calling BGS instead of EVSS for the claims status v1.
