--- a/config/features.yml
+++ b/config/features.yml
@@ -734,7 +734,7 @@ features:
     actor_type: user
     description: Toggle to control the amount of eligible users entering the send_email portion of the flow.
   pdf_warning_banner:
-    description: 'When enabled, will allow display of PDF cert warnings in find-a-form'
+    description: When enabled, will allow display of PDF cert warnings in find-a-form
     actor_type: user
     enable_in_development: true
   pre_entry_covid19_screener:
