--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -27,3 +27,10 @@ web_origin_regex: \Ahttps?:\/\/.*\z
 modules_appeals_api:
   documentation:
     notice_of_disagreements_v1: true
+
+vye:
+  # NOTE: This is a fake key for development purposes only.
+  ivr_key: 'development-vye-ivr-key'
+  scrypt:
+    # NOTE: This is a random salt for development purposes only.
+    salt: 'development-vye-scrypt-salt'
