--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -402,3 +402,10 @@ ask_va:
   authentication:
     max_auth_retry_limit: 3
     retry_attempt_expiry: 604800 # 7 Days
+
+vye:
+  # NOTE: This is a fake key for testing purposes only.
+  ivr_key: 'testing-vye-ivr-key'
+  scrypt:
+    # NOTE: This is a random salt for testing purposes only.
+    salt: 'testing-vye-scrypt-salt'
