--- a/modules/mobile/docs/schemas/Prescriptions.yml
+++ b/modules/mobile/docs/schemas/Prescriptions.yml
@@ -17,7 +17,7 @@ properties:
         type: object
         description: |
           Count of different types of prescriptions. "active" contains prescriptions that have a `refillStatus` of active,
-          submitted, providcerHold, activeParked, refillinprocess, and/or prescriptions that have a tracking number 
+          submitted, providerHold, activeParked, refillinprocess, and/or prescriptions that have a tracking number 
           associated with them. If a prescriptions does not meet the criteria for "active", it appends it's `refillStatus` to the list. 
           If a refillStatus is not present in any prescription, it will not be included in this list.
           See `refillStatus` enum for all possible values. "isRefillable" is a separate count of prescriptions with `isRefillable` set to true. 
