--- a/modules/mobile/docs/schemas/SecureMessageList.yml
+++ b/modules/mobile/docs/schemas/SecureMessageList.yml
@@ -42,10 +42,13 @@ properties:
             example: 15
       messageCounts:
         type: object
+        description: |
+          Count of read and unread messages. `readReceipt` field containing "READ" count towards "read" count 
+          while a null value will count towards "unread". If either read or unread is 0, the key will not be included.
         properties:
-          unread:
+          read:
             type: integer
             example: 5
-          total:
+          unread:
             type: integer
             example: 15
