--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,7 @@ test_users.csv
 
 # Ignore node_modules for development tools
 node_modules
+
+# Ignore public folder (used for local document uploads)
+public
+
